# libzip

./: CMakeLists.txt
lib/: CMakeLists.txt
man/: CMakeLists.txt
src/: CMakeLists.txt
