INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../lib
  ${CMAKE_CURRENT_BINARY_DIR}/..)

CHECK_FUNCTION_EXISTS(getopt HAVE_GETOPT)
IF(NOT HAVE_GETOPT)
  SET(SRC_EXTRA_FILES getopt.c)
ENDIF(NOT HAVE_GETOPT)

ADD_EXECUTABLE(zipcmp zipcmp.c ${SRC_EXTRA_FILES})
TARGET_LINK_LIBRARIES(zipcmp zip)
IF(LIBZIP_INSTALL)
  INSTALL(TARGETS zipcmp RUNTIME DESTINATION bin)
ENDIF()

ADD_EXECUTABLE(zipmerge zipmerge.c ${SRC_EXTRA_FILES})
TARGET_LINK_LIBRARIES(zipmerge zip)
IF(LIBZIP_INSTALL)
  INSTALL(TARGETS zipmerge RUNTIME DESTINATION bin)
ENDIF()

ADD_EXECUTABLE(ziptorrent ziptorrent.c ${SRC_EXTRA_FILES})
TARGET_LINK_LIBRARIES(ziptorrent zip)
IF(LIBZIP_INSTALL)
  INSTALL(TARGETS ziptorrent RUNTIME DESTINATION bin)
ENDIF()
